# admin-console

./: .gitignore  AUTO_UPDATE_SETUP.md  DEPLOYMENT.md  K8S_TOKEN_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  README.md  build-macos.sh  build-rpi.sh  bump-version.sh  config.example.json  deploy  deploy-rpi.sh  homelab-dashboard.service  index.html  main.cjs  main.mjs  package-lock.json  package.json  preload.cjs  setup.sh  styles.css  svelte.config.js  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/server/: manifest-full.js  manifest.js
.svelte-kit/output/server/chunks/: server-internal.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src/: App.svelte  app.css  app.d.ts  app.html  main.ts  preload.ts  renderer.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  mock.rs  state.rs  types.rs
src-tauri/src/controllers/: k8s.rs  mod.rs  port_mapper.rs  unifi.rs
src/controllers/: k8s.ts  port-mapper.ts  status.ts  unifi.ts
src/controllers/mock/: k8s-mock.ts  port-mapper-mock.ts  unifi-mock.ts
src/fixtures/: k8s-nodes.json  unifi-devices.json
src/lib/: api.ts  types.ts
src/lib/components/: K8sNodes.svelte  SystemStatus.svelte  UnifiDevices.svelte
src/lib/components/modals/: AptModal.svelte  CommandModal.svelte  (+1 more)
src/routes/: +page.svelte
src/utils/: logger.ts
ui/: index.html  vite-manifest.json
(+11 files in other folders)
