[package]
name = "homelab-dashboard"
version = "2.1.0"
edition = "2021"
description = "Unified dashboard for Kubernetes and UniFi management"
license = "MIT"

[lib]
name = "homelab_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client — pure-Rust TLS so no OpenSSL link issues on ARM
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }

tokio = { version = "1", features = ["full"] }
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

# For file paths and hashing
dirs = "5"
md5 = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
